# This file is part of stderr. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/stderr/master/COPYRIGHT. No part of stderr, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016 The developers of stderr. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/stderr/master/COPYRIGHT.


[package]
name = "stderr"
description = "stderr"
keywords = ["stderr"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/stderr/blob/master/README.md"
homepage = "https://github.com/lemonrock/stderr"
repository = "https://github.com/lemonrock/stderr.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = false
version = "0.0.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[dependencies]
ansi_term = { git = "https://github.com/lemonrock/rust-ansi-term.git", branch = "makeplain" }
lazy_static = "0.2"
rust-extra = { git = "https://github.com/lemonrock/rust-extra.git" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
