# This file is part of stderr-logging. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/stderr-logging/master/COPYRIGHT. No part of stderr-logging, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016 The developers of stderr-logging. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/stderr-logging/master/COPYRIGHT.


[package]
name = "stderr-logging"
description = "stderr logging (macros and ANSI terminal support; does not do anything on Windows)"
keywords = ["stderr", "ANSI", "terminal", "log", "logging"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/stderr-logging/blob/master/README.md"
homepage = "https://github.com/lemonrock/stderr-logging"
repository = "https://github.com/lemonrock/stderr-logging.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = true
version = "0.0.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[dependencies]
ansi_term = "^0.9"
lazy_static = "0.2"
log = "0.3"
rust-extra = "0.0.13"
time = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
